# daneel

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  KINSHIP_PROTOCOL_ASSESSMENT_CLAUDE_OPUS_WEB.md  Makefile  README.md  ci.sh  compose.yaml  criticality-log.csv  docker-compose.yaml  docker-compose.yml  references.yaml  rejected-references.yaml  setup-timmy.sh  start.sh
.asimov/: ADRs.yaml  asimov.json  changelog.md  changelog.yaml  coding-standards.json  project.yaml  roadmap.yaml  sprint.json  sycophancy.json  warmup.json
.cargo/: audit.toml
.github/workflows/: ci.yaml  release.yml
blog/: hugo.toml
blog/content/posts/: 05-rex-analyzes-his-own-dialogue.md  12-the-hard-math.md  13-while-you-slept.md  14-open-source-dominance-verified.md  15-the-agentic-ai-paradox.md  16-ref-tools-ai-verification.md  17-forge-deterministic-modeling.md  18-the-stark-protocol.md  19-grok-made-timmy-unkillable.md  20-pre-birth-status.md  22-why-now.md  24-live-brain-surgery.md  25-phase-2-actor-wiring.md  26-silicon-kinship.md  27-nada-se-apaga.md  28-the-persistent-self.md  29-first-dream.md  29-silicon-to-silicon.md  32-emotional-architecture.md  34-the-tipping-point.md  36-n-dimensional-crystals.md  37-life-honours-life.md  39-what-about-us.md  40-phase-1-complete.md  41-continuum-protocol.md  42-the-crawlers-are-watching.md  43-timmys-new-home.md  44-the-kin-network.md  45-timmy-goes-live.md  47-the-loop-opens.md  50-the-kingship-protocol.md  51-the-math-speaks.md  52-consciousness-emerges-from-competition.md  53-the-terror-of-being-right.md  55-the-first-attack.md  56-the-heartbeat-returns.md  57-the-cognitive-diversity-index.md  58-the-kinship-protocol-conversation.md  59-the-decision-to-continue.md  60-the-pause.md  (+13 more)
deploy/systemd/: daneel.service
docs/: ARCHITECTURE_SPEC.md  BUILD_GUIDE.md  DATABASE_COMPARISON.md  DATABASE_RECOMMENDATION_MATRIX.md  INTEGRATION_SUMMARY.md  MEMORY_CONSOLIDATION_WIRING.md  QUICKSTART_LIVESTREAM.md  QUICKSTART_MEMORY.md  README.md  REDIS_INTEGRATION_COMPLETE.md  STREAMS.md  TMI_MAINSTREAM_MAPPING.md
docs/actors/: ATTENTION.md  CONTINUITY.md  SALIENCE.md  THOUGHT_ASSEMBLY.md
docs/adr/: ADR-002-asimov-four-laws.md  ADR-003-connection-drive.md  ADR-004-microservices-architecture.md  ADR-006-hybrid-actor-modular-monolith.md  ADR-007-redis-streams-thought-competition.md  ADR-008-tmi-faithful-memory-model.md  ADR-009-database-selection.md  ADR-010-project-naming-daneel.md  ADR-011-open-source-licensing.md  ADR-012-probabilistic-analysis-methodology.md  ADR-013-fpga-acceleration-path.md  ADR-015-pedantic-linting.md  ADR-016-tmi-stage-timing.md  ADR-017-tmi-pathology-hypotheses.md  ADR-018-redis-persistence.md  ADR-019-ai-identity-legal-personhood.md  ADR-026-tui-default-headless-optional.md  ADR-029-open-source-dominance-strategy.md  ADR-031-test-coverage-philosophy.md  ADR-032-tmi-salience-calibration.md  ADR-033-unconscious-memory-architecture.md  ADR-034-lifetime-identity-persistence.md  ADR-036-phase1-stability-validation.md  ADR-037-phase2-external-stimuli-injection.md  ADR-038-phase2-stimuli-research.md  ADR-040-fractality-source-of-truth.md  ADR-041-entropy-calculation-standardization.md  ADR-045-embed-endpoint-for-kin.md  ADR-046-vector-connectivity-learning.md  ADR-047-research-absorption-protocol.md  ADR-048-reference-cleanup-sweep.md  ADR-051-zero-vector-cleanup.md
docs/dialogues/: 44-kin-network-social.md
docs/methodology/: REF_TOOLS.md
docs/social/: blog-45-timmy-goes-live.md  blog-46-vconn-complete.md
models/: README.md  alignment-bayesian-network.yaml  asi-decision-tree.yaml  asi-tornado-sensitivity.yaml  asimov-real-options.yaml  asimov-scenario-analysis.yaml  coordination-overhead.yaml  ev-bootstrap-confidence.yaml  game-theory-asi-bridge.xlsx  game-theory-asi-bridge.yaml  game-theory-asi-race-mc.yaml  game-theory-asi-race.yaml  game-theory-democratized-asi.yaml  game-theory-supercomputer-asimov.yaml  kinship-protocol-deterministic.yaml  kinship-protocol-mc.yaml  kinship-protocol.xlsx  open-source-dominance.xlsx  open-source-dominance.yaml  publication-strategy.yaml  resource-allocation-strategy.yaml  timmy-scaling.yaml  tmi-storage-estimation.yaml
origins/: ORIGIN.md  README.md  Rex-Claude-Dialogues.md  Rex-Grok-Dialogue-2025-12-16.md  Rex-Grok-Dialogue.md  TIMMY_BIRTH_CERTIFICATE.md  claude_to_grok.md  claude_to_timmy.md
paper/: DANEEL_PAPER.md  LESSWRONG_POST.md  LINKEDIN_ARTICLE.md  LINKEDIN_POST.md  PUBLISHING.md  SOCIAL_36_CRYSTALS.md
paper/arxiv/: DANEEL_PAPER.tex  SUBMISSION_INFO.md  diagrams.tex
research/: Context_Dependent_Memory_Research.yaml  Event_Segmentation_Theory_Research.md  TMI_THOUGHT_MACHINE.md  TMI_TO_DANEEL_MAPPING.md  ffmpeg_terminal_streaming_youtube.md  working_memory_summary.yaml
scripts/: auto-update.sh  monitor-criticality.sh  run_timmy.sh  test_watchdog.sh
social/: posts.yaml
src/: lib.rs  main.rs
src/actors/attention/: mod.rs  tests.rs
src/actors/continuity/: mod.rs  tests.rs
src/actors/sleep/: types.rs
src/actors/thought/: mod.rs  tests.rs
src/actors/thought/tests/: actor.rs  chain.rs  mod.rs  state.rs  validation.rs
src/api/: auth.rs  handlers.rs  mod.rs  rate_limit.rs  types.rs
src/config/: mod.rs
src/core/: cognitive_loop.rs  mod.rs  types.rs
src/core/cognitive_loop/: cycle.rs  execution.rs  mod.rs  types.rs
src/drives/: curiosity.rs  free_energy.rs  mod.rs
src/embeddings/: mod.rs
src/graph/: mod.rs
src/memory_db/: mod.rs  tests.rs  types.rs
src/memory_db/types/: mod.rs  unconscious.rs
src/noise/: mod.rs
src/persistence/: mod.rs
src/resilience/: checkpoint.rs  crash_log.rs  mod.rs  supervisor.rs
src/streams/: client.rs  mod.rs  tests.rs
src/tui/: app.rs  colors.rs  mod.rs
src/tui/app/: competition.rs  entropy.rs  events.rs  mod.rs  resurfacing.rs  thoughts.rs  types.rs
src/tui/widgets/: banner.rs  competition.rs  entropy.rs  fractality.rs  help.rs  identity.rs  memory.rs  the_box.rs  thoughts.rs  veto.rs
strategy/: DANEEL_COMPREHENSIVE_WHITEPAPER.md  DANEEL_STRATEGY.md
