[package]
name = "daneel"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "DANEEL - Architecture-based AI alignment through TMI cognitive architecture"
authors = ["Louis C. Tavares <louis@royalbit.io>"]
repository = "https://github.com/royalbit/daneel"
keywords = ["ai", "alignment", "cognitive-architecture", "tmi"]
categories = ["science", "simulation"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Actor framework (Erlang-style supervision)
ractor = "0.13"

# Redis Streams (ephemeral only - ADR-020)
redis = { version = "0.27", features = ["tokio-comp", "streams", "json"] }

# Qdrant Vector DB (persistent memory - ADR-021)
qdrant-client = "1.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"
color-eyre = "0.6"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI (ADR-026, ADR-027) - The Observable Mind
ratatui = "0.29"
crossterm = "0.28"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Random (for TUI demo mode)
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "daneel"
path = "src/main.rs"

# Pedantic linting - zero warnings policy (see ADR-015)
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# === Documentation ===
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"  # Bold actor names are intentional

# === Naming ===
module_name_repetitions = "allow"
similar_names = "allow"  # TMI terms: content/context

# === Code Style ===
must_use_candidate = "allow"  # Too noisy, add manually when needed
missing_const_for_fn = "allow"  # Will upgrade when stable
option_if_let_else = "allow"  # if/else often more readable than map_or_else
manual_let_else = "allow"  # Explicit match is clearer than let...else
uninlined_format_args = "allow"  # Older format style is fine
redundant_else = "allow"  # Explicit else blocks are clearer
if_not_else = "allow"  # Negative conditions can be clearer
use_self = "allow"  # Explicit type names can be clearer
match_same_arms = "allow"  # Explicit arms document intent
suboptimal_flops = "allow"  # mul_add is micro-optimization

# === Types ===
derive_partial_eq_without_eq = "allow"  # Eq not always needed
needless_pass_by_value = "allow"  # Actor messages often move values
cast_precision_loss = "allow"  # f32 salience scores are intentional
trivially_copy_pass_by_ref = "allow"  # Micro-optimization not worth API change

# === Collections ===
useless_vec = "allow"  # Prefer consistency
needless_collect = "allow"  # Explicit collect often clearer

# === Tests ===
float_cmp = "allow"  # Exact float comparisons in tests are fine

# === Async ===
future_not_send = "allow"  # Will address when needed

# === Cognitive Architecture ===
too_many_lines = "allow"
cognitive_complexity = "allow"

# === Dependencies ===
multiple_crate_versions = "allow"  # Transitive deps we don't control
