[package]
name = "daneel"
version = "0.8.8"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "DANEEL - Architecture-based AI alignment through TMI cognitive architecture"
authors = ["Louis C. Tavares <louis@royalbit.io>"]
repository = "https://github.com/royalbit/daneel"
keywords = ["ai", "alignment", "cognitive-architecture", "tmi"]
categories = ["science", "simulation"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Actor framework (Erlang-style supervision)
ractor = { version = "0.15", features = ["async-trait"] }

# Redis Streams (ephemeral only - ADR-020)
redis = { version = "1.0", features = ["tokio-comp", "streams", "json"] }

# Qdrant Vector DB (persistent memory - ADR-021)
qdrant-client = "1.16"

# OpenSSL vendored for MUSL static builds (ADR-050)
openssl = { version = "0.10", features = ["vendored"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"
color-eyre = "0.6"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Random (for cognitive noise/variance)
rand = "0.9"

# HTTP API (Phase 2 - Injection API)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HMAC authentication
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# HTTP types
http = "1"

# Text Embeddings (Phase 2 - Forward-only embeddings for Law Crystal analysis)
fastembed = "5"
linfa = { version = "0.8.1", features = ["serde"] }
linfa-clustering = "0.8.1"
ndarray = "0.16"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "daneel"
path = "src/main.rs"

# Pedantic linting - zero warnings policy (see ADR-015)
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# === Truly Unavoidable ===
multiple_crate_versions = "allow"  # Transitive deps - we don't control upstream

# === Coverage (ADR-049) ===
# Allow coverage_nightly cfg for #[coverage(off)] attribute
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

# Coverage requirements (ADR-049: 100% on testable code)
[package.metadata.coverage]
threshold = 100
fail_under_lines = 100
fail_under_functions = 100
policy = "All testable code must have 100% coverage. Untestable code marked with #[coverage(off)]."
